update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stoneqq11/react-dialog",
+  "name": "@dreamland/react-dialog",
   "version": "1.0.0",
   "description": "react dialog component",
   "repository": "https://github.com/stoneqq11/react-dialog.git",
